<resources>
    <string name="app_name">ImageSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="custom_app_label">Image Search</string>
    <string name="search_prompt">Enter Search query</string>
    <string name="search_button_label">Search</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="filter_menu">filter</string>
    <string name="title_activity_filter">Advanced Search</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="site_hint">Enter Site</string>
    <string name="site_filter">Site Filter</string>
    <string name="image_type">Image Type</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_size">Image Size</string>

    <string-array name="filter_sizes">
        <item>any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge </item>
        <item>huge</item>
    </string-array>

    <string-array name="filter_colors">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="filter_types">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>


</resources>
