<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.magupta.imagesearch.activities.FilterActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size"
        android:textSize="20sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:entries="@array/filter_sizes"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignLeft="@+id/sColorFilter"
        android:layout_alignStart="@+id/sColorFilter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_filter"
        android:textSize="20sp"
        android:id="@+id/textView2"
        android:padding="10dp"
        android:layout_below="@+id/sImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sColorFilter"
        android:layout_below="@+id/sImageSize"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:layout_alignParentEnd="true"
        android:entries="@array/filter_colors"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type"
        android:textSize="20sp"
        android:id="@+id/textView3"
        android:layout_below="@+id/sColorFilter"
        android:padding="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sImageType"
        android:layout_below="@+id/sColorFilter"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:layout_alignParentEnd="true"
        android:entries="@array/filter_sizes"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_alignLeft="@+id/sColorFilter"
        android:layout_alignStart="@+id/sColorFilter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_filter"
        android:padding="10dp"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:layout_below="@+id/sImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/sImageType"
        android:layout_alignStart="@+id/sImageType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/site_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/btSaveSearch"
        android:layout_below="@+id/textView4"
        android:layout_toLeftOf="@+id/etSiteFilter"
        android:layout_toStartOf="@+id/etSiteFilter"
        android:onClick="saveSearchFilters"
        android:layout_marginTop="56dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:id="@+id/btSearchCancel"
        android:layout_alignBottom="@+id/btSaveSearch"
        android:layout_alignRight="@+id/etSiteFilter"
        android:layout_alignEnd="@+id/etSiteFilter"
        android:layout_marginRight="49dp"
        android:layout_marginEnd="49dp" />

</RelativeLayout>
